updated pages and only one ci-script

--- a/wiki/waehrungen.html
+++ b/wiki/waehrungen.html
@@ -1,8 +1,10 @@
 ---
 title: Währungen
+desc: Eine Übersicht über viele Kryptowährungen.
+layout: wiki
 ---
 
-<h1>Währungen</h1>
+<h1>Währungensübersicht</h1>
 
 <ul>
 {% for waehrung in site.waehrung %}
