made ready for getting online

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 <h1>Coinium.ch <small>Die Coinommunity</small></h1>
 
+<p>Coinium ist ein schweizer Projekt, dass möglichst viele und leicht verständliche Informationen zu Bitcoin und alternativen Kryptowährungen zusammen trägt.</p>
+
 <div class="posts-list">
     <h3>Aktuelle Blogposts:</h3>
     {% for post in paginator.posts %}
