added CC by-sa license

--- a/wiki/waehrungen.html
+++ b/wiki/waehrungen.html
@@ -6,6 +6,8 @@ layout: wiki
 
 <h1>Währungensübersicht</h1>
 
+<p>Hier findest du eine Übersicht vieler Kryptowährungen. Informationen zu normalem Geld findest du unter dem Begriff <a href="/glossar/fiat-geld/">Fiat-Geld</a>.</p>
+
 <ul>
 {% for waehrung in site.waehrung %}
     <li>
