--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: default
 
 <p>Coinium ist ein schweizer Projekt, dass möglichst viele und leicht verständliche Informationen zu Bitcoin und alternativen Kryptowährungen zusammen trägt.</p>
 
+<p>Wir sind derzeit noch am Aufbauen und freuen uns jederzeit über neue <a href="/about/mitmachen">Beiträge</a>.</p>
+
 <div class="posts-list">
     <h3>Aktuelle Blogposts:</h3>
     {% for post in paginator.posts %}
