--- a/anfrage.html
+++ b/anfrage.html
@@ -10,16 +10,22 @@ layout: default
       method="POST">
     <div class="form-group">
         <label for="replyto">E-Mail Adresse</label>
-        <input type="email" name="_replyto" class="form-control" id="replyto" aria-describedby="emailHelp" placeholder="E-Mailadresse eingeben...">
+        <input type="email" name="email" class="form-control" id="replyto" aria-describedby="emailHelp" placeholder="E-Mailadresse eingeben...">
         <small id="emailHelp" class="form-text text-muted">Wir werden deine E-Mailadresse nicht weitergeben.</small>
     </div>
     <div class="form-group">
         <label for="betreff">Betreff</label>
-        <input type="text" name="Betreff" class="form-control" id="betreff" placeholder="Betreff eingeben...">
+        <input type="text" name="_subject" class="form-control" id="betreff" placeholder="Betreff eingeben...">
     </div>
     <div class="form-group">
         <label for="anfrage">Deine Anfrage</label>
-        <textarea class="form-control" id="anfrage" rows="3"></textarea>
+        <textarea class="form-control" id="anfrage" name="anfrage" rows="3"></textarea>
     </div>
+    <div class="form-group" style="display:none;">
+        <label for="gotcha">Hier nichts eingeben</label>
+        <input type="text" class="form-control" id="gotcha" name="_gotcha">
+    </div>
+    <input type="hidden" name="_language" value="de" />
+    <input type="hidden" name="_format" value="plain" />
     <input type="submit" name="send" class="btn btn-success btn-lg" value="Absenden">
 </form>
