--- a/anfrage.html
+++ b/anfrage.html
@@ -27,5 +27,6 @@ layout: default
     </div>
     <input type="hidden" name="_language" value="de" />
     <input type="hidden" name="_format" value="plain" />
+    <input type="hidden" name="_next" value="https://coinium.ch/" />
     <input type="submit" name="send" class="btn btn-success btn-lg" value="Absenden">
 </form>
