--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,9 +47,9 @@ layout: wiki
         </ul>
     </div>
 </div>
+<hr>
 
 <h3>Währungen</h3>
-
 <div class="row">
     <div class="col-sm-12 col-md-4">
         <div class="card">
@@ -87,4 +87,14 @@ layout: wiki
 </div>
 
 <p><a href="/wiki/waehrungen.html">Weitere Währungen</a></p>
+<hr>
 
+<h3>Anleitungen</h3>
+<ul>
+    {% assign tutorials = site.tutorials | sort: "date" %}
+    {% for tutorial in tutorials %}
+    <li>
+        <a href="{{ tutorial.url }}">{{ tutorial.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
