--- a/wiki/index.html
+++ b/wiki/index.html
@@ -57,7 +57,7 @@ layout: wiki
                 <img class="card-img-top" src="/img/bitcoin.png" alt="Bitcoin Logo">
             </a>
             <div class="card-body">
-                <p class="card-text">Der Bitcoin enstand 2007 und ist die erste erfolgreiche Kryptowährung.</p>
+                <p class="card-text">Der Bitcoin entstand 2007 und ist die erste erfolgreiche Kryptowährung.</p>
                 <a href="/waehrung/btc/">Mehr lesen</a>
             </div>
         </div>
