search by algolia

--- a/suche.html
+++ b/suche.html
@@ -27,3 +27,5 @@ title: Suche
         Sorry, leider wurde mit diesem Suchbegriff nichts gefunden.
     </p>
 </script>
+
+<p><a class="new-window" href="https://www.algolia.com/referrals/fe9d87b5/join"><img src="/img/search-by-algolia.svg"></a></p>
