--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: wiki
                 <a href="/glossar/proof-of-stake/">Was ist Proof-of-Stake?</a>
             </li>
             <li>
-                <a href="faq/was-sind-icos.html">Was sind ICOs?</a>
+                <a href="/wiki/faq/was-sind-icos.html">Was sind ICOs?</a>
             </li>
         </ul>
     </div>
@@ -29,10 +29,10 @@ layout: wiki
         <strong>Trading</strong>
         <ul>
             <li>
-                <a href="trading/baeren-und-bullen.html">Von Bären und Bullen</a>
+                <a href="/wiki/trading/baeren-und-bullen.html">Von Bären und Bullen</a>
             </li>
             <li>
-                <a href="trading/lending.html">Lending</a>
+                <a href="/wiki/trading/lending.html">Lending</a>
             </li>
         </ul>
     </div>
