--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ layout: wiki
         <strong>Community</strong>
         <ul>
             <li>
-                <a href="https://slack.coinium.ch">Slack-Chat</a>
+                <i class="fa fa-slack" aria-hidden="true"></i> <a href="https://slack.coinium.ch">Slack-Chat</a>
             </li>
             <li>
-                <a href="https://t.me/coinium_ch">Telegram-Chat (Schweizer-Deutsch)</a>
+                <i class="fa fa-telegram" aria-hidden="true"></i> <a href="https://t.me/coinium_ch">Telegram-Chat (Schweizer-Deutsch)</a>
             </li>
         </ul>
     </div>
